--- a/train.ipynb
+++ b/train.ipynb
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,8 @@
     "    plt.tight_layout()\n",
     "    plt.ylabel('True label')\n",
     "    plt.xlabel('Predicted label\\naccuracy={:0.4f}; misclass={:0.4f}'.format(accuracy, misclass))\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    plt.savefig('confusion_matrix.png')"
    ]
   },
   {
@@ -588,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
