--- a/predict.ipynb
+++ b/predict.ipynb
@@ -205,7 +205,11 @@
     "img_loc = 'D:/Projects/Research/MalayalamOCR/temp/Sample/Sample/111/image1.png'\n",
     "\n",
     "img = cv2.resize(cv2.imread(img_loc, 0), (700, 1000))\n",
-    "img = cv2.bitwise_not(img)\n",
+    "\n",
+    "# uncomment if img is gre and has black background with white text\n",
+    "# img = cv2.bitwise_not(img)\n",
+    "\n",
+    "\n",
     "# img=img[150:-200,30:-30]\n",
     "img2 = img.copy()\n",
     "bw, contours = clear_noice(img)\n",
